tests/analyzer/invalid/0003_mixed_issues.tj
def duplicate_name(x: int, y: int) -> int {
    return x + y
}

def duplicate_name(a: int, b: int) -> int {
    return a + b
}

def unused_and_duplicate(x: int, x: int, y: int) -> int {
    return x
}
